cluster/apps/storage/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "content-save"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
  name: longhorn-ui
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.j-burg11.dev
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
  tls:
  - hosts:
    - longhorn.j-burg11.dev
    secretName: longhorn-tls-prod
